<resources>
    <string name="app_name">JustJava</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="_10">$10</string>

    <string name="ordersummary">Order Summary</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="your_name">Your name</string>
    <string name="_2">2</string>

</resources>