<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/sub"
            android:text="@string/sub"
            android:onClick="decrement"

            tools:ignore="UsingOnClickInXml" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quantity_text_view"
            android:text="@string/_0"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginBottom="16dp"/>
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/add"
            android:text="@string/add"
            android:height="48dp"
            android:width="48dp"
            android:onClick="increment"

            tools:ignore="UsingOnClickInXml"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordersummary"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_summary_text_view"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="@string/_10"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp"
        android:onClick="submitOrder"
        tools:ignore="UsingOnClickInXml"
        android:layout_marginStart="16dp"/>

</LinearLayout>